--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -12,8 +12,14 @@ About page
         <ul class="product-list">
         {% for itm in products %}
             <li>
-                <span>{{ itm.name }}</span>
-                <a href="{% url 'products:detail' pk=forloop.counter0 %}">Перейти</a>
+                <span class="product-list__item-name">{{ itm.name }}</span>
+                {% if itm.description|length < 15 %}
+                <span class="product-list__item-description">{{ itm.description}}</span>
+                {% else %}
+                <span class="product-list__item-description">{{ itm.description|slice:"0:15" }}...</span>
+                {% endif %}
+                <span class="product-list__item-cost">{{ itm.cost}}</span>
+                <a href="{% url 'products:detail' pk=itm.id %}">Перейти</a>
             </li>
         {% endfor %}
         </ul>
