Revert "Взял за основу файлы лектора из вебинара №2 (т.к. не сделал до конца ДЗ№2). Повторил всё что было на вебинаре №3 и внес в базу данных все данные из json товаров. Но вносил из ком.строки, а не импортом. Надеюсь правильно понял условия ДЗ."
This reverts commit aeab6d5f17c740bcaa194d0ae46151af1f968686.

--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -12,14 +12,8 @@ About page
         <ul class="product-list">
         {% for itm in products %}
             <li>
-                <span class="product-list__item-name">{{ itm.name }}</span>
-                {% if itm.description|length < 15 %}
-                <span class="product-list__item-description">{{ itm.description}}</span>
-                {% else %}
-                <span class="product-list__item-description">{{ itm.description|slice:"0:15" }}...</span>
-                {% endif %}
-                <span class="product-list__item-cost">{{ itm.cost}}</span>
-                <a href="{% url 'products:detail' pk=itm.id %}">Перейти</a>
+                <span>{{ itm.name }}</span>
+                <a href="{% url 'products:detail' pk=forloop.counter0 %}">Перейти</a>
             </li>
         {% endfor %}
         </ul>
