--- a/server/products/templates/products/detail.html
+++ b/server/products/templates/products/detail.html
@@ -5,12 +5,7 @@ About page
 {% endblock %}
 
 {% block page_content %}
-    <link rel="stylesheet" href="/static/products/css/detail.css">
     <div class="page__content">
-        <div class="product">
-            <h1 class="product__name">{{ product.name }}</h1>
-            <span class="product__description">{{ product.description}}</span>
-            <span class="product__cost">{{ product.cost }}</span>
-        </div>
+        <h1 class="product-title">{{ product.name }}</h1>
     </div>
 {% endblock %}
